迁移合成数量窗与存储状态 / port craft quantity UI and storage state
迁移合成数量窗口及存储身份、处理器、漏斗、挖掘、放置与传输状态；保留 metadata/NBT、整数维度、防御性复制和公开值语义。

Port the craft quantity window and storage identity, handler, funnel, mining, placement, and transfer state while preserving metadata/NBT, integer dimensions, defensive copies, and public value semantics.